realized custim scrollbar in text area, fixed warning with calc in spinner

--- a/src/components/User/AddPetForm/AddPetInput/AddPetInput.module.scss
+++ b/src/components/User/AddPetForm/AddPetInput/AddPetInput.module.scss
@@ -2,64 +2,88 @@
 @import 'shared/styles/mixins';
 
 .label {
-    position: relative;
-    width: 100%;
-    @include flex(flex-start, flex-start);
-    flex-direction: column;
-    gap: 8px;
+	position: relative;
+	width: 100%;
+	@include flex(flex-start, flex-start);
+	flex-direction: column;
+	gap: 8px;
 
-    &__text {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 1.4;
-        color: $primary-text-color;
+	&__text {
+		font-weight: 500;
+		font-size: 18px;
+		line-height: 1.4;
+		color: $primary-text-color;
 
-        @include media('tablet') {
-            font-size: 24px;
-            line-height: 1.1;
-        }
-    }
+		@include media('tablet') {
+			font-size: 24px;
+			line-height: 1.1;
+		}
+	}
 }
 
-.label__textarea{
-    @extend .label__text;
-    
-    margin-left: 30px
-    
+.label__textarea {
+	@extend .label__text;
+
+	margin-left: 30px;
 }
 .input {
-    width: 100%;
-    height: 40px;
+	width: 100%;
+	height: 40px;
 
-    padding: 10px 15px;
+	padding: 10px 15px;
 
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 19px;
 
-    border: 1px solid $accent-color;
-    color: $primary-text-color;
-    background-color: $primary-bg-color;
-    border-radius: 40px;
-    outline-color: $accent-color;
+	border: 1px solid $accent-color;
+	color: $primary-text-color;
+	background-color: $primary-bg-color;
+	border-radius: 40px;
+	outline-color: $accent-color;
 
-    @include media(tablet) {
-        height: 50px;
-        font-size: 16px;
-        line-height: 17px;
-    }
+	@include media(tablet) {
+		height: 50px;
+		font-size: 16px;
+		line-height: 17px;
+	}
 }
 
-.textarea{
-    @extend .input;
-    height: 100px;
-    resize: none;
-    align-self: center;
-    border-radius: 20px;
-        @include media(tablet) {
+.textarea {
+	@extend .input;
+	height: 100px;
+	resize: none;
+	align-self: center;
+	border-radius: 20px;
+	// overflow: hidden;
+	overflow-y: scroll;
+	&::-webkit-scrollbar {
+		width: 3px;
 
-                height: 116px;
-                width: 394px;
+		background-color: transparent;
+	}
 
-            }
+	&::-webkit-scrollbar-thumb {
+		background-color: $hover-color;
+		border-radius: 9em;
+	}
+	@include media(tablet) {
+		height: 116px;
+		width: 394px;
+	}
+}
+
+.textarea__wrapper {
+	@include flex(center, center);
+	align-self: center;
+
+	width: 100%;
+	height: 100px;
+	overflow: hidden;
+	border-radius: 20px;
+
+	@include media(tablet) {
+		width: 394px;
+		height: 116px;
+	}
 }
